добавил стили (не работают)

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,6 +10,10 @@
       "@ui/*": ["src/app/shared/components/ui/*"],
       "@gcomponents/*": ["src/app/shared/global/*"],
       "@views/*": ["src/app/views/*"],
+      "@sviews/*": ["src/styles/views/*"],
+      "@slayout/*": ["src/styles/layout/*"],
+      "@sui/*": ["src/styles/components/ui/*"],
+      "@sglobal/*": ["src/styles/components/global/*"],
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
