dashboard плитки работают

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,13 +7,11 @@
       "@core/*": ["src/app/core/*"],
       "@feature/*": ["src/app/feature/*"],
       "@layout/*": ["src/app/layout/*"],
-      "@ui/*": ["src/app/shared/components/ui/*"],
-      "@gcomponents/*": ["src/app/shared/global/*"],
+      "@components/*": ["src/app/shared/components/*"],
       "@views/*": ["src/app/views/*"],
       "@sviews/*": ["src/styles/views/*"],
       "@slayout/*": ["src/styles/layout/*"],
-      "@sui/*": ["src/styles/components/ui/*"],
-      "@sglobal/*": ["src/styles/components/global/*"],
+      "@scomponents/*": ["src/styles/components/*"],
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
